# ray-tracing

./: .gitignore  BasicGeom.hpp  Body.hpp  CMakeLists.txt  Camera.hpp  Figure.hpp  FlatFigure.hpp  Image.hpp  LightSource.hpp  LightsLoader.hpp  README.md  STLReader.hpp  Scene.hpp  Triangle.hpp  config.cfg  lights.lamps  log  scene.stl  smth.cpp
containers/: Container.hpp  KDTree.hpp  StupidContainer.hpp
figures/: BoundingBox.hpp  Figure.hpp  FlatFigure.hpp  Quadrangle.hpp  Sphere.hpp  Triangle.hpp  VolumetricFigure.hpp
geometry/: BasicGeom.hpp  Float.hpp
models/0/: lights.lamps  scene.stl
models/4/: config.cfg
models/5/: config.cfg
models/6/: .directory
parallel/: SyncQueue.hpp  ThreadPool.hpp
reading/: LightsLoader.hpp  MyReader.hpp  STLReader.hpp
rendering/: Image.hpp
scene/: Body.hpp  Camera.hpp  IBody.hpp  LightSource.hpp  OneColorBody.hpp  Scene.hpp  TexturedBody.hpp
